<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="ak">P9I4SjSfRtFenM1hLTyZwoW3YLnmtSda</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_agreement">用户协议</string>
    <string name="app_agreement_content">"1. 本软件专为学习 Android 开发使用，不会收集任何用户数据。 严禁利用本软件侵犯他人隐私权或者用于游戏牟利，如软件使用者不能遵守此规定， 请立即删除。 对于因用户使用本软件而造成自身或他人隐私泄露等任何不良后果，均由用户自行承担，软件作者不负任何责任。
 2. 用户不得对本软件产品进行反向工程（reverse engineer）、反向编译（decompile）或反汇编（disassemble）， 违者属于侵权行为，并自行承担由此产生的不利后果。
 3. 软件保证不含任何病毒，木马，等破坏用户数据的恶意代码，但是由于本软件产品可以通过网络等途径下载、传播，对于从非软件作者指定站点下载的本软件产品软件作者无法保证该软件是否感染计算机病毒、是否隐藏有伪装的特洛伊木马程序或者黑客软件，不承担由此引起的直接和间接损害责任。
 4. 软件会不断更新，以便及时为用户提供新功能和修正软件中的BUG。 同时软件作者保证本软件在升级过程中也不含有任何旨在破坏用户计算机数据的恶意代码。
 5. 由于用户计算机软硬件环境的差异性和复杂性，本软件所提供的各项功能并不能保证在任何情况下都能正常执行或达到用户所期望的结果。 用户使用本软件所产生的一切后果，软件作者不承担任何责任。
 6. 如果用户自行安装本软件，即表明用户信任软件作者，自愿选择安装本软件，并接受本协议所有条款。 如果用户不接受本协议，请立即删除。
"</string>
    <string name="app_agreement_privacy">已阅读《用户协议》和《隐私政策》</string>
    <string name="app_author">ZCShou</string>
    <string name="app_btn_agree">同意并继续</string>
    <string name="app_btn_disagree">不同意</string>
    <string name="app_email">zcsexp@gmail.com</string>
    <string name="app_error_agreement">"必须先接受
《用户协议》和《隐私政策》"</string>
    <string name="app_error_code">注册码不能为空</string>
    <string name="app_error_dev">无法跳转到开发者选项，请先确保已开启开发者模式</string>
    <string name="app_error_gps">定位不可用，请检查 GPS 是否开启</string>
    <string name="app_error_input">输入有误，请检查输入是否合法</string>
    <string name="app_error_input_null">输入不能为空，请重新输入内容</string>
    <string name="app_error_latitude">"纬度超出限制!
取值：-90.0 ~ 90.0"</string>
    <string name="app_error_location">请先选择位置</string>
    <string name="app_error_longitude">"经度超出限制!
取值：-180.0 ~ 180.0"</string>
    <string name="app_error_network">网络不可用，请检查网络连接</string>
    <string name="app_error_param">非法参数</string>
    <string name="app_error_permission">权限不足，请授予相关权限</string>
    <string name="app_error_protocol">请先阅读并接收用户协议</string>
    <string name="app_error_read">"请依次阅读并接受
《用户协议》和《隐私政策》"</string>
    <string name="app_error_search">查找失败，请检查网络或定位</string>
    <string name="app_error_username">用户名不合法</string>
    <string name="app_history">历史记录</string>
    <string name="app_location_copy">位置已复制到剪切板</string>
    <string name="app_location_ok">位置已传送</string>
    <string name="app_location_save">位置已保存</string>
    <string name="app_name">影梭</string>
    <string name="app_privacy">隐私政策</string>
    <string name="app_privacy_content">"1. 本软件专为学习 Android 开发使用，不会收集任何用户数据。
 2. 用户不得对本软件产品进行反向工程（reverse engineer）、反向编译（decompile）或反汇编（disassemble）， 违者属于侵权行为，并自行承担由此产生的不利后果。
 3. 软件保证不含任何病毒，木马，等破坏用户数据的恶意代码，但是由于本软件产品可以通过网络等途径下载、传播，对于从非软件作者指定站点下载的本软件产品软件作者无法保证该软件是否感染计算机病毒、是否隐藏有伪装的特洛伊木马程序或者黑客软件，不承担由此引起的直接和间接损害责任。
 4. 软件会不断更新，以便及时为用户提供新功能和修正软件中的BUG。 同时软件作者保证本软件在升级过程中也不含有任何旨在破坏用户计算机数据的恶意代码。
 5. 由于用户计算机软硬件环境的差异性和复杂性，本软件所提供的各项功能并不能保证在任何情况下都能正常执行或达到用户所期望的结果。 用户使用本软件所产生的一切后果，软件作者不承担任何责任。
 6. 如果用户自行安装本软件，即表明用户信任软件作者，自愿选择安装本软件，并接受本协议所有条款。 如果用户不接受本协议，请立即删除。
"</string>
    <string name="app_search_null">没有匹配结果，请重新搜索</string>
    <string name="app_search_tips">请输入查找内容</string>
    <string name="app_service_tips">影梭服务正在运行中</string>
    <string name="app_settings">设置</string>
    <string name="app_statement">仅供学习使用，否则后果自负！</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="copy">Copy</string>
    <string name="cur_position">返回当前位置</string>
    <string name="error_a11y_label">Error: invalid</string>
    <string name="error_icon_content_description">Error</string>
    <string name="expand_button_title">Advanced</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="history_delete_error">删除记录失败</string>
    <string name="history_delete_ok">删除成功！</string>
    <string name="history_error_location">定位失败，请手动选取定位点</string>
    <string name="history_error_search">未搜索到指定内容</string>
    <string name="history_expiration">7</string>
    <string name="history_idle">暂无历史记录</string>
    <string name="history_location_default_name">地图位置</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="input_button">输入位置</string>
    <string name="input_position_baidu">BD09 坐标系</string>
    <string name="input_position_cancel">取消</string>
    <string name="input_position_gps">GPS 坐标系</string>
    <string name="input_position_ok">传送</string>
    <string name="item_view_role_description">Tab</string>
    <string name="joystick_bike">自行车</string>
    <string name="joystick_history">历史记录</string>
    <string name="joystick_history_tips">搜索或点击历史位置</string>
    <string name="joystick_map">地图</string>
    <string name="joystick_map_tips">搜索或点击地图位置</string>
    <string name="joystick_move">移动</string>
    <string name="joystick_run">跑步</string>
    <string name="joystick_walk">步行</string>
    <string name="label_latitude">纬度</string>
    <string name="label_longitude">经度</string>
    <string name="map_pic_normal">普通图</string>
    <string name="map_pic_sate">卫星图</string>
    <string name="material_clock_display_divider">:</string>
    <string name="material_clock_toggle_content_description">Select AM or PM</string>
    <string name="material_motion_easing_accelerated">cubic-bezier(0.4, 0.0, 1.0, 1.0)</string>
    <string name="material_motion_easing_decelerated">cubic-bezier(0.0, 0.0, 0.2, 1.0)</string>
    <string name="material_motion_easing_emphasized">path(M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1)</string>
    <string name="material_motion_easing_linear">cubic-bezier(0.0, 0.0, 1.0, 1.0)</string>
    <string name="material_motion_easing_standard">cubic-bezier(0.4, 0.0, 0.2, 1.0)</string>
    <string name="material_timepicker_am">AM</string>
    <string name="material_timepicker_pm">PM</string>
    <string name="mtrl_checkbox_button_icon_path_checked">M14,18.2 11.4,15.6 10,17 14,21 22,13 20.6,11.6z</string>
    <string name="mtrl_checkbox_button_icon_path_group_name">icon</string>
    <string name="mtrl_checkbox_button_icon_path_indeterminate">M13.4,15 11,15 11,17 13.4,17 21,17 21,15z</string>
    <string name="mtrl_checkbox_button_icon_path_name">icon path</string>
    <string name="mtrl_checkbox_button_path_checked">M23,7H9C7.9,7,7,7.9,7,9v14c0,1.1,0.9,2,2,2h14c1.1,0,2-0.9,2-2V9C25,7.9,24.1,7,23,7z</string>
    <string name="mtrl_checkbox_button_path_group_name">button</string>
    <string name="mtrl_checkbox_button_path_name">button path</string>
    <string name="mtrl_checkbox_button_path_unchecked">M23,7H9C7.9,7,7,7.9,7,9v14c0,1.1,0.9,2,2,2h14c1.1,0,2-0.9,2-2V9C25,7.9,24.1,7,23,7z M23,23H9V9h14V23z</string>
    <string name="mtrl_checkbox_state_description_checked">Checked</string>
    <string name="mtrl_checkbox_state_description_indeterminate">Partially checked</string>
    <string name="mtrl_checkbox_state_description_unchecked">Not checked</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="mtrl_picker_a11y_next_month">Change to next month</string>
    <string name="mtrl_picker_a11y_prev_month">Change to previous month</string>
    <string name="nav_menu_contact">联系作者</string>
    <string name="nav_menu_dev">开发人员选项</string>
    <string name="nav_menu_feedback">问题反馈</string>
    <string name="nav_menu_history">历史记录</string>
    <string name="nav_menu_more">更多</string>
    <string name="nav_menu_settings">设置</string>
    <string name="nav_menu_upgrade">检测更新</string>
    <string name="register_cancel">取消</string>
    <string name="register_check">我已阅读免责声明，并同意所有条款</string>
    <string name="register_limit">有效期</string>
    <string name="register_ok">注册</string>
    <string name="register_response">注册码</string>
    <string name="register_tips">长按复制以上代码发送给开发者，然后在下面填写获取到的注册码</string>
    <string name="register_title">离线注册</string>
    <string name="register_user_name">用户名</string>
    <string name="setting_altitude">海拔高度(米)</string>
    <string name="setting_altitude_default">55.0</string>
    <string name="setting_author">开发者</string>
    <string name="setting_bike">驾驶速度(米/秒)</string>
    <string name="setting_bike_default">10.0</string>
    <string name="setting_group_about">关于</string>
    <string name="setting_group_log">记录</string>
    <string name="setting_group_move">移动</string>
    <string name="setting_group_sys">系统</string>
    <string name="setting_joystick">摇杆类型</string>
    <string name="setting_joystick_tips">重启摇杆后生效</string>
    <string name="setting_lat_max_offset">经度最大偏移距离(米)</string>
    <string name="setting_location">位置</string>
    <string name="setting_log_off">关闭日志</string>
    <string name="setting_lon_max_offset">纬度最大偏移距离(米)</string>
    <string name="setting_pos_history">历史记录有效期(天)</string>
    <string name="setting_random_offset">随机偏移</string>
    <string name="setting_random_offset_default">10.0</string>
    <string name="setting_random_offset_summary">仅在使用历史位置时生效</string>
    <string name="setting_run">跑步速度(米/秒)</string>
    <string name="setting_run_default">3.6</string>
    <string name="setting_version">版本号</string>
    <string name="setting_walk">步行速度(米/秒)</string>
    <string name="setting_walk_default">1.2</string>
    <string name="zoom_in">放大</string>
    <string name="zoom_out">缩小</string>
</resources>