<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item android:icon="@drawable/ic_menu_history" android:id="@id/nav_history" android:title="@string/nav_menu_history" />
    </group>
    <group>
        <item android:title="@string/nav_menu_settings">
            <menu>
                <item android:icon="@drawable/ic_menu_settings" android:id="@id/nav_settings" android:title="@string/nav_menu_settings" />
                <item android:icon="@drawable/ic_menu_dev" android:id="@id/nav_dev" android:title="@string/nav_menu_dev" />
            </menu>
        </item>
    </group>
    <item android:title="@string/nav_menu_more">
        <menu>
            <item android:icon="@drawable/ic_menu_upgrade" android:id="@id/nav_update" android:title="@string/nav_menu_upgrade" />
            <item android:icon="@drawable/ic_menu_feedback" android:id="@id/nav_feedback" android:title="@string/nav_menu_feedback" />
            <item android:icon="@drawable/ic_contact" android:id="@id/nav_contact" android:title="@string/nav_menu_contact" />
        </menu>
    </item>
</menu>