<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="fill_parent" app:layout_behavior="@string/appbar_scrolling_view_behavior"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
        <com.baidu.mapapi.map.MapView android:id="@id/bdMapView" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent" />
        <RadioGroup android:orientation="vertical" android:id="@id/RadioGroupMapType" android:layout_width="90.0dip" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:layout_alignParentTop="true" android:layout_marginEnd="5.0dip" android:layout_alignParentEnd="true">
            <RadioButton android:textColor="#ff00796b" android:id="@id/mapNormal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:checked="true" android:minHeight="48.0dip" android:text="@string/map_pic_normal" android:layout_weight="1.0" />
            <RadioButton android:textColor="#ff00796b" android:id="@id/mapSatellite" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="48.0dip" android:text="@string/map_pic_sate" android:layout_weight="1.0" />
        </RadioGroup>
        <ImageButton android:theme="@style/RippleWhite" android:id="@id/cur_position" android:background="?android:selectableItemBackgroundBorderless" android:layout_width="48.0dip" android:layout_height="48.0dip" android:layout_marginTop="350.0dip" android:contentDescription="@string/cur_position" android:layout_marginEnd="10.0dip" android:layout_alignParentEnd="true" app:srcCompat="@drawable/ic_home_position" app:tint="@color/colorAccent" />
        <ImageButton android:theme="@style/RippleWhite" android:id="@id/zoom_in" android:background="?android:selectableItemBackgroundBorderless" android:layout_width="48.0dip" android:layout_height="48.0dip" android:layout_marginTop="383.0dip" android:contentDescription="@string/zoom_in" android:layout_marginEnd="10.0dip" android:layout_alignParentEnd="true" app:srcCompat="@drawable/ic_zoom_in" app:tint="@color/colorAccent" />
        <ImageButton android:theme="@style/RippleWhite" android:id="@id/zoom_out" android:background="?android:selectableItemBackgroundBorderless" android:layout_width="48.0dip" android:layout_height="48.0dip" android:layout_marginTop="416.0dip" android:contentDescription="@string/zoom_out" android:layout_marginEnd="10.0dip" android:layout_alignParentEnd="true" app:srcCompat="@drawable/ic_zoom_out" app:tint="@color/colorAccent" />
        <ImageButton android:theme="@style/RippleWhite" android:id="@id/input_pos" android:background="?android:selectableItemBackgroundBorderless" android:layout_width="48.0dip" android:layout_height="48.0dip" android:layout_marginTop="240.0dip" android:contentDescription="@string/input_button" android:layout_marginEnd="10.0dip" android:layout_alignParentEnd="true" app:srcCompat="@drawable/ic_input" app:tint="@color/colorAccent" />
        <TextView android:textSize="10.0sp" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/app_statement" android:layout_alignParentBottom="true" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>