<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="24.0sp" android:textStyle="bold" android:textColor="#ff282828" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_marginBottom="5.0dip" android:text="@string/register_title" />
    <EditText android:id="@id/reg_user_name" android:background="@drawable/border_gray" android:layout_width="fill_parent" android:layout_height="32.0dip" android:layout_marginTop="3.0dip" android:hint="@string/register_user_name" android:inputType="text" android:textCursorDrawable="@null" android:layout_marginStart="3.0dip" android:layout_marginEnd="3.0dip" android:autofillHints="username" app:drawableStartCompat="@drawable/ic_user" />
    <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="horizontal" android:background="@drawable/border_gray" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:layout_marginStart="3.0dip" android:layout_marginEnd="3.0dip">
        <ImageButton android:theme="@style/RippleWhite" android:background="?android:selectableItemBackgroundBorderless" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:contentDescription="@string/register_limit" app:srcCompat="@drawable/ic_date" />
        <TextView android:textSize="18.0sp" android:textColor="@color/darkgray" android:background="@android:color/transparent" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/register_limit" />
        <DatePicker android:id="@id/date_picker" android:layout_width="fill_parent" android:layout_height="100.0dip" style="@android:style/Widget.DatePicker" />
    </LinearLayout>
    <TextView android:gravity="center" android:id="@id/reg_request" android:background="@drawable/border_gray" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginTop="8.0dip" android:singleLine="true" android:drawablePadding="10.0dip" android:textIsSelectable="true" android:layout_marginStart="3.0dip" android:layout_marginEnd="3.0dip" app:drawableStartCompat="@drawable/ic_pwd" />
    <TextView android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/register_tips" android:layout_marginStart="3.0dip" android:layout_marginEnd="3.0dip" />
    <EditText android:id="@id/reg_response" android:background="@drawable/border_gray" android:scrollbars="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:hint="@string/register_response" android:maxLines="5" android:minLines="3" android:drawablePadding="10.0dip" android:inputType="textMultiLine" android:layout_marginStart="3.0dip" android:layout_marginEnd="3.0dip" android:autofillHints="name" app:drawableStartCompat="@drawable/ic_key" />
    <CheckBox android:gravity="center" android:layout_gravity="center" android:id="@id/reg_check" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/register_check" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textStyle="bold" android:textColor="#ff282828" android:gravity="center" android:id="@id/reg_cancel" android:padding="14.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/register_cancel" android:layout_weight="1.0" />
        <Space android:layout_width="1.0dip" android:layout_height="fill_parent" />
        <TextView android:textStyle="bold" android:textColor="#ff282828" android:gravity="center" android:id="@id/reg_agree" android:padding="14.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/register_ok" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>